; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wifi_provisioning/src/extr_manager.c_wifi_prov_mgr_stop_provisioning.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wifi_provisioning/src/extr_manager.c_wifi_prov_mgr_stop_provisioning.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prov_ctx_lock = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Provisioning manager not initialized\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wifi_prov_mgr_stop_provisioning() #0 {
  %1 = load i32, i32* @prov_ctx_lock, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %6, label %3

3:                                                ; preds = %0
  %4 = load i32, i32* @TAG, align 4
  %5 = call i32 @ESP_LOGE(i32 %4, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %12

6:                                                ; preds = %0
  %7 = load i32, i32* @prov_ctx_lock, align 4
  %8 = call i32 @ACQUIRE_LOCK(i32 %7)
  %9 = call i32 @wifi_prov_mgr_stop_service(i32 0)
  %10 = load i32, i32* @prov_ctx_lock, align 4
  %11 = call i32 @RELEASE_LOCK(i32 %10)
  br label %12

12:                                               ; preds = %6, %3
  ret void
}

declare dso_local i32 @ESP_LOGE(i32, i8*) #1

declare dso_local i32 @ACQUIRE_LOCK(i32) #1

declare dso_local i32 @wifi_prov_mgr_stop_service(i32) #1

declare dso_local i32 @RELEASE_LOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
